# rs_auth_ms_boilerplate

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: rust.yml
migrations/: 20240106121545_init.sql
src/: lib.rs  main.rs
src/api/: mod.rs
src/config/: account.rs  cors.rs  mod.rs  roles.rs
src/controllers/: auth_controller.rs  mod.rs  user_controller.rs
src/controllers/v1/: auth_controller.rs  mod.rs  user_controller.rs
src/database/: mod.rs
src/repository/: mod.rs  user_repository.rs
src/services/: access_control.rs  crypto.rs  mod.rs
tests/: mod.rs
tests/specs/: access_control_test.rs  csrf_test.rs  hash_test.rs  jwt_test.rs  mod.rs  role.rs
