[package]
name = "auth_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
chrono = "0.4.31"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono", "uuid" ] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
dotenv = "0.15.0"
env_logger = "0.10.1"
